--- a/src/Components/Recipes/Recipes.css
+++ b/src/Components/Recipes/Recipes.css
@@ -19,6 +19,7 @@
 
 .recipe-cards {
     display: grid;
+    position: relative;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     gap: 20px;
     justify-items: center;
@@ -26,6 +27,7 @@
 
 .recipe-card {
     background-color: #fff;
+    position: relative;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     width: 100%;
@@ -69,4 +71,48 @@
 
 .recipe-button:hover {
     background-color: #e76f51;
+}
+
+.favorite-icons {
+  position: absolute;
+  right: 0%;
+  font-size: 1.5em;
+  color: #e57e26;
+  cursor: pointer;
+  transition: transform 0.2s ease;
+  z-index: 2; /* Για να βγαίνει πάνω από την εικόνα */
+  
+}
+
+.favorite-icons:hover {
+  transform: scale(1.2);
+}
+
+.spinner-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 60vh;
+  text-align: center;
+}
+
+.spinner {
+  border: 6px solid #f3f3f3;
+  border-top: 6px solid #e57e26;
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  animation: spin 1s linear infinite;
+  margin-bottom: 1rem;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+.loading-text {
+  font-size: 1.5rem;
+  color: #e57e26;
 }
