--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -9,13 +9,13 @@
     font-size: 3em;
     font-family: 'Courier New', Courier, monospace;
     margin-bottom: 20px;
-    color: #e3a975;
+    color: #e57e26;
 }
 
 .about-content h2 {
     font-size: 2.5em;
     margin-top: 30px;
-    color: #d95a5a;
+    color: #e57e26;
     font-style: italic;
 }
 
