--- a/src/Components/SevenDaysProgram/SevenDaysProgram.css
+++ b/src/Components/SevenDaysProgram/SevenDaysProgram.css
@@ -52,3 +52,11 @@
   flex: 1;
   text-align: left;
 }
+
+.seven-days-img {
+  width: 60px;
+  height: 60px;
+  object-fit: cover;
+  border-radius: 8px;
+  margin-left: 10px;
+}
